--- a/ProfilePort/ProfilePort.csproj
+++ b/ProfilePort/ProfilePort.csproj
@@ -1098,6 +1098,10 @@
     <Content Include="Scripts\version.json" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App\Profile\Controllers\" />
+    <Folder Include="App\Profile\Directives\" />
+    <Folder Include="App\Profile\Partials\" />
+    <Folder Include="App\Profile\Services\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
