--- a/ProfilePort/ProfilePort.csproj
+++ b/ProfilePort/ProfilePort.csproj
@@ -171,6 +171,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\DataAdapters\Contact.cs" />
+    <Compile Include="Adapters\DataAdapters\Educations.cs" />
+    <Compile Include="Adapters\DataAdapters\Favorites.cs" />
+    <Compile Include="Adapters\DataAdapters\Interests.cs" />
+    <Compile Include="Adapters\DataAdapters\Jobs.cs" />
+    <Compile Include="Adapters\DataAdapters\Messages.cs" />
+    <Compile Include="Adapters\DataAdapters\Notes.cs" />
+    <Compile Include="Adapters\DataAdapters\Profiles.cs" />
+    <Compile Include="Adapters\DataAdapters\Skills.cs" />
+    <Compile Include="Adapters\Interfaces\IContact.cs" />
+    <Compile Include="Adapters\Interfaces\IEducations.cs" />
+    <Compile Include="Adapters\Interfaces\IFavorite.cs" />
+    <Compile Include="Adapters\Interfaces\IInterests.cs" />
+    <Compile Include="Adapters\Interfaces\IJobs.cs" />
+    <Compile Include="Adapters\Interfaces\IMessages.cs" />
+    <Compile Include="Adapters\Interfaces\INotes.cs" />
+    <Compile Include="Adapters\Interfaces\IProfiles.cs" />
+    <Compile Include="Adapters\Interfaces\ISkills.cs" />
+    <Compile Include="ViewModels\MessageVM.cs" />
+    <Compile Include="ViewModels\ProfileVM.cs" />
+    <Compile Include="ViewModels\JobVM.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -211,8 +232,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountBindingModels.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="ViewModels\AccountBindingModels.cs" />
+    <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -1145,6 +1166,7 @@
     <Content Include="bower_components\version.json" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Adapters\MockDataAdapters\" />
     <Folder Include="App\Common\Directives\" />
     <Folder Include="App\Common\Services\" />
     <Folder Include="App\Dashboard\Directives\" />
