--- a/ProfilePort.Data/ProfilePort.Data.csproj
+++ b/ProfilePort.Data/ProfilePort.Data.csproj
@@ -86,6 +86,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="Migrations\201506212209410_REalsadf.cs" />
+    <Compile Include="Migrations\201506220146071_init.cs" />
+    <Compile Include="Migrations\201506220146071_init.Designer.cs">
+      <DependentUpon>201506220146071_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201506220150241_inits.cs" />
+    <Compile Include="Migrations\201506220150241_inits.Designer.cs">
+      <DependentUpon>201506220150241_inits.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201506220153254_updatemopdal.cs" />
+    <Compile Include="Migrations\201506220153254_updatemopdal.Designer.cs">
+      <DependentUpon>201506220153254_updatemopdal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -97,6 +111,17 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201506220146071_init.resx">
+      <DependentUpon>201506220146071_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201506220150241_inits.resx">
+      <DependentUpon>201506220150241_inits.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201506220153254_updatemopdal.resx">
+      <DependentUpon>201506220153254_updatemopdal.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
