--- a/ProfilePort/Web.config
+++ b/ProfilePort/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ProfilePort-20150620112118.mdf;Initial Catalog=aspnet-ProfilePort-20150620112118;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ProfilePort-20150620112118.mdf;Initial Catalog=aspnet-ProfilePort-20150620112118;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="ProfilePortContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=ProfilePortContext-20150621205130; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ProfilePortContext-20150621205130.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
