--- a/ProfilePort.DataModel/ProfilePort.DataModel.csproj
+++ b/ProfilePort.DataModel/ProfilePort.DataModel.csproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContactInfo.cs" />
+    <Compile Include="Dashboard.cs" />
     <Compile Include="Edit.cs" />
     <Compile Include="Education.cs" />
     <Compile Include="Favorite.cs" />
