--- a/ProfilePort/ProfilePort.csproj
+++ b/ProfilePort/ProfilePort.csproj
@@ -251,42 +251,13 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\DashboardVM.cs" />
+    <Compile Include="ViewModels\Comments.cs" />
+    <Compile Include="ViewModels\getDashboardVM.cs" />
     <Compile Include="ViewModels\JobVM.cs" />
     <Compile Include="ViewModels\MessageVM.cs" />
     <Compile Include="ViewModels\ProfileVM.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="app\app.js" />
-    <Content Include="app\appCtrl.js" />
-    <Content Include="app\common\controllers\coErrorModalCtrl.js" />
-    <Content Include="app\common\controllers\messageModal.js" />
-    <Content Include="app\common\controllers\uploadFileModalCtrl.js" />
-    <Content Include="app\common\directives\characterOnly.js" />
-    <Content Include="app\common\directives\datePickerPattern.js" />
-    <Content Include="app\common\directives\discardChangesConfirmation.js" />
-    <Content Include="app\common\directives\ngEnter.js" />
-    <Content Include="app\common\directives\noCopyPaste.js" />
-    <Content Include="app\common\directives\notesErrorCheck.js" />
-    <Content Include="app\common\directives\numbersOnly.js" />
-    <Content Include="app\common\directives\setFocus.js" />
-    <Content Include="app\common\directives\validatePassword.js" />
-    <Content Include="app\common\directives\validateUsername.js" />
-    <Content Include="app\common\partials\errorModal.html" />
-    <Content Include="app\common\partials\messageModal.html" />
-    <Content Include="app\config.js" />
-    <Content Include="app\Home\controllers\home.js" />
-    <Content Include="app\Home\partials\home.html" />
-    <Content Include="app\Home\services\homeService.js" />
-    <Content Include="app\message\controllers\messageCtrl.js" />
-    <Content Include="app\message\partials\message.html" />
-    <Content Include="app\message\services\messageService.js" />
-    <Content Include="app\notes\controllers\notesCtrl.js" />
-    <Content Include="app\notes\partials\notes.html" />
-    <Content Include="app\notes\services\notesService.js" />
-    <Content Include="app\profile\controllers\profileCtrl.js" />
-    <Content Include="app\profile\partials\profile.html" />
-    <Content Include="app\profile\services\profileService.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\angular-toastr.css" />
     <Content Include="Content\angular-toastr.min.css" />
@@ -1175,11 +1146,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Adapters\MockDataAdapters\" />
-    <Folder Include="app\common\services\" />
-    <Folder Include="app\Home\Directives\" />
-    <Folder Include="app\message\directive\" />
-    <Folder Include="app\notes\directive\" />
-    <Folder Include="app\profile\directives\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
